<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/navigation_materials"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_materials" />
    <item
        android:id="@+id/navigation_mfg"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_mfg" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_history" />
</menu>
